[project]
name = "poetry init"
version = "poetry shell"
description = "Aula 08"
authors = [
    {name = "Edinilson Lopez",email = "edinilson@l.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
